    with network and rise as AptRepoException. 
  * AptRepoException: Original exception store in original_exception variable 
    of raised exception.
  * DpkgChangelog: for parsing errors, provide more details in exception.
  * AptRepoClient: Use posixpath instead of os.path. Should fix usage under 
    Windows. Thanks to Chris Oliver (excid3@)

 -- Alexandr D. Kanevskiy <packages@bifh.org>  Sun, 13 Sep 2009 23:05:56 +0300

python-minideblib (0.6.21.32) unstable; urgency=low

  * Fix deb repository line parsing

 -- Alexandr D. Kanevskiy <packages@bifh.org>  Wed, 20 May 2009 17:27:56 +0300

python-minideblib (0.6.21.31) unstable; urgency=low

  * DpkgChangelog: show line number in DpkgChangelogException

 -- Alexandr D. Kanevskiy <packages@bifh.org>  Thu, 26 Feb 2009 19:32:58 +0200

python-minideblib (0.6.21.30) unstable; urgency=low

  * DpkgChangelog: now can handle correctly unicode strings

 -- Alexandr D. Kanevskiy <packages@bifh.org>  Sun, 10 Aug 2008 22:30:41 +0300

python-minideblib (0.6.21.29) unstable; urgency=low

  * AptRepoClient: refactoring of loading repositories.
  * AptRepoClient: type() -> isinstance().
  * AptRepoClient: refactoring of filter methods.
  * DpkgChangelog: parse_changelog can be asked to parse until specific version

 -- Alexandr D. Kanevskiy <packages@bifh.org>  Wed,  7 May 2008 23:34:05 +0300

python-minideblib (0.6.21.28) unstable; urgency=low

  * AptRepoClient: fixed regexp to match any empty space in sources.list

 -- Alexandr D. Kanevskiy <packages@bifh.org>  Thu,  3 Jan 2008 20:13:38 +0200

python-minideblib (0.6.21.27) unstable; urgency=low

  * AptRepoClient: fixed another case with source's arch

 -- Alexandr D. Kanevskiy <packages@bifh.org>  Fri, 21 Sep 2007 07:55:29 +0300

python-minideblib (0.6.21.26) unstable; urgency=low

  * AptRepoClient: "any" = "all"

 -- Alexandr D. Kanevskiy <packages@bifh.org>  Tue, 11 Sep 2007 12:34:44 +0300

python-minideblib (0.6.21.25) unstable; urgency=low
